--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "devDependencies": {
     "@types/express": "^4.17.16",
     "@types/node": "^18.11.18",
-    "esbuild": "^0.17.5"
+    "esbuild": "^0.17.5",
+    "jest-environment-jsdom": "^29.5.0"
   }
 }
