--- a/package.json
+++ b/package.json
@@ -5,7 +5,11 @@
   "main": "src/demo.ts",
   "scripts": {
     "build": "npx esbuild src/demo.ts --outfile=dist/src/demo.js --bundle --platform=node --packages=external",
-    "start": "node dist/src/demo.js"
+    "build:test": "npx esbuild src/demo.spec.ts --outfile=dist/src/test.js --bundle --platform=node --packages=external",
+    "test": "npx jest ./dist/src/test.js",
+    "test:watch": "npx jest ./dist/src/test.js --watch",
+    "coverage": "npx jest ./dist/src/test.js --coverage --coverageDirectory=dist/coverage --coveragePathIgnorePatterns=demo",
+    "start": "node ./dist/src/demo.js"
   },
   "repository": {
     "type": "git",
@@ -24,11 +28,17 @@
   "devDependencies": {
     "@types/express": "^4.17.16",
     "@types/node": "^18.11.18",
+    "@typescript-eslint/eslint-plugin": "^5.43.0",
     "esbuild": "^0.17.5",
-    "eslint": "^8.37.0",
+    "eslint": "^8.0.1",
+    "eslint-config-standard-with-typescript": "^34.0.1",
+    "eslint-plugin-import": "^2.25.2",
+    "eslint-plugin-n": "^15.0.0",
+    "eslint-plugin-promise": "^6.0.0",
     "jest": "^29.5.0",
     "jest-environment-jsdom": "^29.5.0",
     "prettier": "^2.8.7",
-    "typedoc": "^0.23.28"
+    "typedoc": "^0.23.28",
+    "typescript": "*"
   }
 }
