--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "parsegraph-artist-server",
-  "version": "1.6.0",
-  "description": "parsegraph artist server",
+  "name": "expressts",
+  "version": "0.1",
+  "description": "expressts",
   "main": "src/demo.ts",
   "scripts": {
     "build": "npx esbuild src/demo.ts --outfile=dist/src/demo.js --bundle --platform=node --packages=external",
@@ -9,24 +9,26 @@
     "test": "npx jest ./dist/src/test.js",
     "test:watch": "npx jest ./dist/src/test.js --watch",
     "coverage": "npx jest ./dist/src/test.js --coverage --coverageDirectory=dist/coverage --coveragePathIgnorePatterns=demo",
+    "doc": "npx typedoc --tsconfig tsconfig.browser.json src/demo.ts --out ./dist/docs",
     "start": "node ./dist/src/demo.js"
   },
   "repository": {
     "type": "git",
-    "url": "git+ssh://git@github.com/parsegraph/artist.git"
+    "url": "git+ssh://git@github.com/parsegraph/expressts.git"
   },
   "author": "Rainback, Inc.",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/parsegraph/artist/issues"
+    "url": "https://github.com/parsegraph/expressts/issues"
   },
-  "homepage": "https://github.com/parsegraph/artist#readme",
+  "homepage": "https://github.com/parsegraph/expressts#readme",
   "dependencies": {
     "express": "^4.17.2",
     "glob": "^7.2.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.16",
+    "@types/glob": "^8.1.0",
     "@types/node": "^18.11.18",
     "@typescript-eslint/eslint-plugin": "^5.43.0",
     "esbuild": "^0.17.5",
